Bug 1352496 - Enable sending other child processes crash pings from the CrashManager. r=ted, r=bsmedberg, a=gchang

MozReview-Commit-ID: bG5iphe9Bc